# RShell

./: .gitignore  Cargo.toml  flake.nix  meson.build
src/: application.rs  main.rs  meson.build  rshell.gresource.xml  style.css
src/services/niri/: mod.rs  socket.rs  types.rs
src/tools/: layer.rs  log.rs  mod.rs  tasks.rs
src/ui/: meson.build
src/ui/bar/: active_window.rs  mod.rs  workspace.rs  workspaces.rs
src/ui/blueprints/: bar.blp  meson.build
