[package]
name = "rshell"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = { version = "0.11.2", package = "gtk4" }
gtk4-layer-shell = "0.8.0"
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_8"]}
async-std = "1.13.2"
niri-ipc = "25.11.0"
thiserror = "2.0.18"
serde_json = "1.0.149"
gio = { version = "0.22.4", features = ["v2_80"] }
astal-apps = "0.1.0"
